--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Stonecastle Blog
 SEOTitle: STONECASTLE | stonecastle  Blog
 header-img: img/post-bg-desk.jpg
-email: allencool@qq.com
+email: stonecastle999@gmail.com
 description: "Every failure is leading towards success."
 keyword: "stonecastle , security, Cryptographci"
 url: "https://haoranstone.github.io/stonecastle/"          # your host, for absolute URL
@@ -12,7 +12,7 @@ github_repo: "https://github.com/haoranstone/stonecastle.git" # you code reposit
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Figure out the truth"
-sidebar-avatar: /img/stonecastle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /stonecastle/img/stonecastle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
